--- a/index.html
+++ b/index.html
@@ -21,21 +21,21 @@
                     </div>
                 </form>
                 <div id="output">
-                    <div class="card bg-primary mb-2">
+                    <div class="card bg-warning mb-2">
                         <div class="card-block">
                             <h4>Grams:</h4>
                             <div id="gramsOutput"></div>
                         </div>
                     </div>
 
-                    <div class="card bg-success mb-2">
+                    <div class="card bg-info mb-2">
                         <div class="card-block">
                             <h4>Kilograms:</h4>
                             <div id="kgOutput"></div>
                         </div>
                     </div>
 
-                    <div class="card bg-danger mb-2">
+                    <div class="card bg-secondary mb-2">
                         <div class="card-block">
                             <h4>Ounces:</h4>
                             <div id="ozOutput"></div>
